What's new in ZODB 3.9.0
========================

General
-------

- (3.9.0a1) Document conflict resolution (see ZODB/ConflictResolution.txt).

- (3.9.0a1) Bugfix the situation in which comparing persistent objects (for
  instance, as members in BTree set or keys of BTree) might cause data
  inconsistency during conflict resolution.

- (3.9.0a1) Support multidatabase references in conflict resolution.

- (3.9.0a1) Make it possible to examine oid and (in some situations) database
  name of persistent object references during conflict resolution.

- (unreleased, after 3.9.0a1) Moved 'transaction' module out of ZODB.
  ZODB depends upon this module, but it must be installed separately.

- (unreleased, after 3.9.0a1) ZODB installation now requires
  setuptools.

ZEO
---

- (3.9.0a1) Fixed a serious bug that could cause client I/O to stop
  (hang). This was accomonied by a critical log message along the
  lines of: "RuntimeError: dictionary changed size during iteration".

Transactions
------------

- (unlreleased, after 3.9.0a1) 'transaction' module is not included in
  ZODB anymore.  It is now just a ZODB dependency (via setuptools
  declarations).

Blobs
-----

- (3.9.0a1) Fixed bug #127182: Blobs were subclassable which was not desired.

- (3.9.0a1) Fixed bug #126007: tpc_abort had untested code path that was
  broken.

- (3.9.0a1) Fixed bug #129921: getSize() function in BlobStorage could not
  deal with garbage files

BTrees
------

- 